--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,15 @@
     <application
         android:name=".GlobalData"
         android:allowBackup="true"
-        android:icon="@drawable/appbluetooth48"
+        android:icon="@drawable/apkdesktop"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
+        <!--android:label="@string/main_Title"-->
         <activity
             android:name=".MainActivity"
-            android:label="@string/main_Title"
+
             android:windowSoftInputMode="stateHidden|adjustResize"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
